work/AzureDevOps/dotnet_api/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-comunicacao-venda-api
  namespace: #{namespace}#
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      app: comunicacao-venda-api
  template:
    metadata:
      labels:
        app: comunicacao-venda-api
    spec:
      containers:
      - name:  comunicacao-venda-api-container
        image: #{image}#:#{imageName}#
        resources:
          requests:
            cpu: #{cpu}#
            memory: #{memory}#
          limits:
            cpu: #{cpu-limits}#
            memory: #{memory-limits}#
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-appsettings
          mountPath: /app/appsettings.json
          subPath: appsettings.json
      volumes:
        - name: config-appsettings
          configMap:
            name: comunicacao-venda-api-appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: service-comunicacao-venda-api
  namespace: #{namespace}#
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: comunicacao-venda-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-comunicacao-venda-api
  namespace: #{namespace}#
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: #{rota}#.tecnobank.com.br
    http:
      paths:
      - backend:
          service:
            name: service-comunicacao-venda-api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - #{rota}#.tecnobank.com.br
    secretName: tls-tecnobank
